poblema de paadding

--- a/index.htnl.html
+++ b/index.htnl.html
@@ -16,8 +16,7 @@
     <nav>
         <a href="#">HOME</a>
         <a href="#">NOTICIAIS</a>
-        <a href="#">CURIOSIDADES</a>
-        <a href="#">FALE CONOSCO</a>
+        <a href="#">contato</a>
     </nav>
     <MAIN>
         <article>
